--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>Canvas Project</title>
 </head>
+
 <body>
-    <p>Testing</p>
+    <div class="container">
+        <canvas id="canvas-draft" class="canvas" width='1280px' height='600px'></canvas>
+        <canvas id="canvas-real" class="canvas" width='1280px' height='600px'></canvas>
+    </div>
+    <div class="container1">
+        <button type="button" id="drawButton" class="btn btn-outline-dark waves-effect">Pen</button>
+        <button type="button" id="rectButton" class="btn btn-outline-dark waves-effect">Rectangle</button>
+        <button type="button" id="lineButton" class="btn btn-outline-dark waves-effect">Line</button>
+        <button type="button" id="circleButton" class="btn btn-outline-dark waves-effect">Circle</button>
+        <button type="button" id="textButton" class="btn btn-outline-dark waves-effect">Text</button>
+        <button type="button" id="clearButton" class="btn btn-outline-dark waves-effect">Clear</button>
+        <form action=>
+            <input type="color" id="favcolor" name="favcolor" value="#ff0000"><br><br>
+        </form>
+
+
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
+    </script>
+    <script src="https://kit.fontawesome.com/99a6113203.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./js/canvas common.js"></script>
+    <script type="text/javascript" src="./js/draw.js"></script>
+    <script type="text/javascript" src="./js/rect.js"></script>
+    <script type="text/javascript" src="./js/line.js"></script>
+    <script type="text/javascript" src="./js/circle.js"></script>
+    <script type="text/javascript" src="./js/text.js"></script>
+    <script type="text/javascript" src="./js/clear.js"></script>
+
 </body>
+
 </html>
