--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <button type="button" id="circleButton" class="btn btn-outline-dark waves-effect">Circle</button>
         <button type="button" id="textButton" class="btn btn-outline-dark waves-effect">Text</button>
         <button type="button" id="clearButton" class="btn btn-outline-dark waves-effect">Clear</button>
+        <button type="button" id="speechButton" class="btn btn-outline-dark waves-effect">SpeechBubble</button>
         <form action=>
             <input type="color" id="favcolor" name="favcolor" value="#ff0000"><input type="range" id="width" name="width" min="1" max="20" onchange="widthVal(this.value)">width<br><br>
         </form>
@@ -46,6 +47,7 @@
     <script type="text/javascript" src="./js/circle.js"></script>
     <script type="text/javascript" src="./js/text.js"></script>
     <script type="text/javascript" src="./js/clear.js"></script>
+    <script type="text/javascript" src="./js/speechBubble.js"></script>
 
 </body>
 
