--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
         <button type="button" id="circleButton" class="btn btn-outline-dark waves-effect">Circle</button>
         <button type="button" id="textButton" class="btn btn-outline-dark waves-effect">Text</button>
         <button type="button" id="clearButton" class="btn btn-outline-dark waves-effect">Clear</button>
+        <button type="button" id="undoButton" class="btn btn-outline-dark waves-effect">Undo</button>
+        <button type="button" id="redoButton" class="btn btn-outline-dark waves-effect">Redo</button>
         <form action=>
-            <input type="color" id="favcolor" name="favcolor" value="#ff0000"><input type="range" id="width" name="width" min="1" max="20" onchange="widthVal(this.value)">width<br><br>
+            <input type="color" id="favcolor" name="favcolor" value="#ff0000">
+            <input type="range" id="width" name="width" min="1" max="20" onchange="widthVal(this.value)">width<br><br>
         </form>
 
 
