--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 <body>
 
     <div class="container">
+        <div id ="magnify">
         <canvas id="canvas-draft" class="canvas" width='1280px' height='600px'></canvas>
         <canvas id="canvas-real" class="canvas" width='1280px' height='600px'></canvas>
+        </div>
     </div>
     <div class="container1">
         <button type="button" id="drawButton" class="btn btn-outline-dark waves-effect">Pen</button>
@@ -26,6 +28,9 @@
         <button type="button" id="textButton" class="btn btn-outline-dark waves-effect">Text</button>
         <button type="button" id="clearButton" class="btn btn-outline-dark waves-effect">Clear</button>
         <button type="button" id="speechButton" class="btn btn-outline-dark waves-effect">SpeechBubble</button>
+        <button type="button" id="triangleButton" class="btn btn-outline-dark waves-effect">Triangle</button>
+        <button type="button" id="zoomIn" class="btn btn-outline-dark waves-effect">Zoom +</button>
+       
         <form action=>
             <input type="color" id="favcolor" name="favcolor" value="#ff0000"><input type="range" id="width" name="width" min="1" max="20" onchange="widthVal(this.value)">width<br><br>
         </form>
@@ -48,6 +53,8 @@
     <script type="text/javascript" src="./js/text.js"></script>
     <script type="text/javascript" src="./js/clear.js"></script>
     <script type="text/javascript" src="./js/speechBubble.js"></script>
+    <script type="text/javascript" src="./js/triangle.js"></script>
+    <script type="text/javascript" src="./js/zoomIn.js"></script>
 
 </body>
 
