--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="container">
         <canvas id="canvas-draft" class="canvas" width='1280px' height='600px'></canvas>
         <canvas id="canvas-real" class="canvas" width='1280px' height='600px'></canvas>
+        <canvas id="canvas-real2" class="canvas" width='1280px' height='600px'></canvas>
     </div>
     <div class="container1">
         <button type="button" id="drawButton" class="btn btn-outline-dark waves-effect">Pen</button>
