Pentagon and hexagon shapes

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <button type="button" id="undoButton" class="btn btn-outline-dark waves-effect">Undo</button>
         <button type="button" id="redoButton" class="btn btn-outline-dark waves-effect">Redo</button>
         <button type="button" id="save" class="btn btn-outline-dark waves-effect">Download</button>
+        <button type="button" id="pentagonButton" class="btn btn-outline-dark waves-effect">Pentagon</button>
+        <button type="button" id="hexagonButton" class="btn btn-outline-dark waves-effect">Hexagon</button>
         
 
         <form action=>
@@ -61,7 +63,8 @@
     <script type="text/javascript" src="./js/triangle.js"></script>
     <script type="text/javascript" src="./js/zoomIn.js"></script>
     <script type="text/javascript" src="./js/Save.js"></script>
-
+    <script type="text/javascript" src="./js/Pentagon.js"></script>
+    <script type="text/javascript" src="./js/Hexagon.js"></script>
 </body>
 
 </html>
