--- a/index.html
+++ b/index.html
@@ -27,18 +27,17 @@
         <button type="button" id="clearButton" class="btn btn-outline-dark waves-effect">Clear</button>
         <button type="button" id="speechButton" class="btn btn-outline-dark waves-effect">SpeechBubble</button>
         <button type="button" id="triangleButton" class="btn btn-outline-dark waves-effect">Triangle</button>
+        <button type="button" id="eraser" class="btn btn-outline-dark waves-effect">Eraser</button>
         <button type="button" id="zoomIn" class="btn btn-outline-dark waves-effect">Zoom +</button>
-        <button type="button" id="undoButton" class="btn btn-outline-dark waves-effect">Undo</button>
-        <button type="button" id="redoButton" class="btn btn-outline-dark waves-effect">Redo</button>
         <button type="button" id="save" class="btn btn-outline-dark waves-effect">Download</button>
-
+    </div>
+    <div class="container1">
         <form action=>
             <input type="color" id="favcolor" name="favcolor" value="#ff0000">
-            <input type="range" id="width" name="width" min="1" max="20" onchange="widthVal(this.value)">width<br><br>
+            <input type="range" id="width" name="width" min="1" max="50">width<br><br>
         </form>
-
-
-
+        <button type="button" id="undoButton" class="btn btn-outline-dark waves-effect">Undo</button>
+        <button type="button" id="redoButton" class="btn btn-outline-dark waves-effect">Redo</button>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
@@ -58,6 +57,7 @@
     <script type="text/javascript" src="./js/triangle.js"></script>
     <script type="text/javascript" src="./js/zoomIn.js"></script>
     <script type="text/javascript" src="./js/Save.js"></script>
+    <script type="text/javascript" src="./js/eraser.js"></script>
 
 </body>
 
