upload image function wip

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
         <button type="button" id="pentagonButton" class="btn btn-outline-dark waves-effect">Pentagon</button>
         <button type="button" id="hexagonButton" class="btn btn-outline-dark waves-effect">Hexagon</button>
+        <input type="file" id="imageLoader" name="imageLoader">
         
 
 
@@ -65,6 +66,7 @@
     <script type="text/javascript" src="./js/Save.js"></script>
     <script type="text/javascript" src="./js/Pentagon.js"></script>
     <script type="text/javascript" src="./js/Hexagon.js"></script>
+    <script type="text/javascript" src="./js/UploadImage.js"></script>
 </body>
 
 </html>
