--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +9,6 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Canvas Project</title>
 </head>
-
 <body>
     <div class="container1">
         <input type="color" id="favcolor" name="favcolor" value="#ff0000">
@@ -46,34 +44,27 @@
             <!--Clear--></button>
         <button type="button" id="save" class="btn btn-outline-dark waves-effect p-2 px-3 bg-light">
             <!--Download--></button>
+            <button type="button" id="fillerButton" class="btn btn-outline-dark waves-effect p-2 px-3 bg-light">
+                <!--Filler--></button>
         <input type="file" id="imageLoader" name="imageLoader">
     </div>
     <div class="container2 py-3">
         <form class="py-3" action=>
-            <input type="range" id="width" name="width" min="1" max="150" value="10"> <img src="../images/Width.png" alt="Width" title="Width">
-            <input type="range" id="blur-slider" name="blur" min="0" max="50" value="0"> Blur
-            <input type="range" id="brightness-slider" name="brightness" min="0%" max="100%" value="100%"> brightness
-            <input type="range" id="contrast-slider" name="contrast" min="0%" max="100%" value="100%"> contrast <br>
-            <input type="range" id="grayscale-slider" name="grayscale" min="0%" max="100%" value="0%"> grayscale
-            <input type="range" id="opacity-slider" name="opacity" min="0%" max="100%" value="100%"> opacity
-            <input type="range" id="saturate-slider" name="saturate" min="0%" max="100%" value="100%"> saturate
-            <input type="range" id="hue-rotate-slider" name="hue-rotate" min="0deg" max="360deg" value="0deg">
-            hue-rotate
+            <input type="range" id="width" name="width" min="1" max="150" value="10"> width
+            <input type="range" class= "filter" id="blur-slider" name="blur" min="0" max="50" value="0"> Blur
+            <input type="range" class= "filter" id="brightness-slider" name="brightness" min="0%" max="100%" value="100%"> Brightness
+            <input type="range" class= "filter" id="contrast-slider" name="contrast" min="0%" max="100%" value="100%"> Contrast <br>
+            <input type="range" class= "filter" id="grayscale-slider" name="grayscale" min="0%" max="100%" value="0%"> Grayscale
+            <input type="range" class= "filter" id="opacity-slider" name="opacity" min="0%" max="100%" value="100%"> Opacity
+            <input type="range" class= "filter" id="saturate-slider" name="saturate" min="0%" max="100%" value="100%"> Saturate
+            <input type="range" class= "filter" id="hue-rotate-slider" name="hue-rotate" min="0deg" max="360deg" value="0deg"> Hue-rotate
         </form>
     </div>
-
     <div class="container">
         <canvas id="canvas-draft" class="canvas" width='1280px' height='850px'></canvas>
         <canvas id="canvas-real" class="canvas" width='1280px' height='850px'></canvas>
         <canvas id="canvas-real2" class="canvas" width='1280px' height='850px'></canvas>
     </div>
-
-
-
-
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
     </script>
@@ -96,7 +87,6 @@
     <script type="text/javascript" src="./js/Pentagon.js"></script>
     <script type="text/javascript" src="./js/Hexagon.js"></script>
     <script type="text/javascript" src="./js/UploadImage.js"></script>
-
+    <script type="text/javascript" src="./js/filler.js"></script>
 </body>
-
 </html>
