--- a/index.html
+++ b/index.html
@@ -50,15 +50,14 @@
     </div>
     <div class="container2 py-3">
         <form class="py-3" action=>
-            <input type="range" id="width" name="width" min="1" max="150" value="10"> <img src="../images/Width.png" alt="Width" title="Width">
-            <input type="range" id="blur-slider" name="blur" min="0" max="50" value="0"> Blur
-            <input type="range" id="brightness-slider" name="brightness" min="0%" max="100%" value="100%"> brightness
-            <input type="range" id="contrast-slider" name="contrast" min="0%" max="100%" value="100%"> contrast <br>
-            <input type="range" id="grayscale-slider" name="grayscale" min="0%" max="100%" value="0%"> grayscale
-            <input type="range" id="opacity-slider" name="opacity" min="0%" max="100%" value="100%"> opacity
-            <input type="range" id="saturate-slider" name="saturate" min="0%" max="100%" value="100%"> saturate
-            <input type="range" id="hue-rotate-slider" name="hue-rotate" min="0deg" max="360deg" value="0deg">
-            hue-rotate
+            <input type="range" id="width" name="width" min="1" max="150" value="10"> <!--Width-->
+            <input type="range" id="blur-slider" name="blur" min="0" max="50" value="0"> <!--Blur-->
+            <input type="range" id="brightness-slider" name="brightness" min="0%" max="100%" value="100%"> <!--brightness-->
+            <input type="range" id="contrast-slider" name="contrast" min="0%" max="100%" value="100%"> <!--contrast--> <br>
+            <input type="range" id="grayscale-slider" name="grayscale" min="0%" max="100%" value="0%"> <!--grayscale-->
+            <input type="range" id="opacity-slider" name="opacity" min="0%" max="100%" value="100%"> <!--opacity-->
+            <input type="range" id="saturate-slider" name="saturate" min="0%" max="100%" value="100%"> <!--saturate-->
+            <input type="range" id="hue-rotate-slider" name="hue-rotate" min="0deg" max="360deg" value="0deg"> <!--hue-rotate-->
         </form>
     </div>
 
