--- a/index.html
+++ b/index.html
@@ -58,19 +58,19 @@
             <input type="range" class="filter" id="blur-slider" name="blur" min="0" max="50" value="0">
             <label class="sliderNamePosition">Brightness:</label>
             <input type="range" class="filter" id="brightness-slider" name="brightness" min="0%" max="100%"
-                value="100%">
+                value="100">
                 <label class="sliderNamePosition">Contrast:</label> 
-            <input type="range" class="filter" id="contrast-slider" name="contrast" min="0%" max="100%" value="100%">
+            <input type="range" class="filter" id="contrast-slider" name="contrast" min="0%" max="100%" value="100">
             <br>
             <label class="sliderNamePosition">Grayscale:</label> 
-            <input type="range" class="filter" id="grayscale-slider" name="grayscale" min="0%" max="100%" value="0%">
+            <input type="range" class="filter" id="grayscale-slider" name="grayscale" min="0%" max="100%" value="0">
             <label class="sliderNamePosition">Opacity:</label> 
-            <input type="range" class="filter" id="opacity-slider" name="opacity" min="0%" max="100%" value="100%">
+            <input type="range" class="filter" id="opacity-slider" name="opacity" min="0%" max="100%" value="100">
             <label class="sliderNamePosition">Saturate:</label> 
-            <input type="range" class="filter" id="saturate-slider" name="saturate" min="0%" max="100%" value="100%">
+            <input type="range" class="filter" id="saturate-slider" name="saturate" min="0%" max="100%" value="100">
             <label class="sliderNamePosition">Hue-rotate:</label> 
             <input type="range" class="filter" id="hue-rotate-slider" name="hue-rotate" min="0deg" max="360deg"
-                value="0deg">
+                value="0">
         </form>
     </div>
     <div class="container">
