--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container1">
-        <input type="color" id="favcolor" name="favcolor" value="#ff0000">
+        <input type="color" id="favcolor" name="favcolor" value="#00aaff">
         <button type="button" id="drawButton" class="btnBg btn waves-effect p-2 px-3">
             <!--Pen--></button>
         <button type="button" id="eraser" class="btnBg btn waves-effect p-2 px-3">
@@ -55,7 +55,7 @@
     <div class="rangerow">
         <div class="rangecontainer">
             <label class="sliderNamePosition">Width:</label>
-            <input type="range" id="width" name="width" min="1" max="150" value="10">
+            <input type="range" id="width" name="width" min="1" max="150" value="5">
         </div>
         <div class="rangecontainer">
             <label class="sliderNamePosition">Blur:</label>
